[package]
name = "sensor_fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "3.4.0"
derived-deref = "2.1.0"
event-listener = "5.3.1"
futures = "0.3.30"
parking_lot = "0.12.3"

[dev-dependencies]
async-std = "1.12.0"
criterion = { version = "0.5.1", features = ["stable"] }
futures = { version = "0.3.30" }
paste = "1.0.15"
rand = "0.8.5"
spin_sleep = "1.2.1"
tokio = { version = "1.39.3", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "time",
] }

[[bench]]
name = "async_await"
harness = false

[features]
alloc = []
std = ["alloc"]
default = ["std"]
